# monarch-mcp-server

./: .env.example  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FEATURES_COMPARISON.md  INSTALL.md  README.md  ROLLBACK_GUIDE.md  SAFETY.md  SKILL.md  SUMMARY.md  TOOLS.md  TOOLS_REFERENCE.md  add_safety_decorators.py  docker-compose.yml  login_setup.py  pyproject.toml
.claude/skills/monarch-money-mcp/: SKILL.md
.claude/skills/monarch-money-mcp/references/: financial-analysis.md  safety.md  tools.md
.githooks/: pre-commit
.github/scripts/: smoke_mcp.py
.github/workflows/: cd.yml  ci.yml
conductor/: product-guidelines.md  product.md  tech-stack.md
conductor/archive/refactor_architecture_20260201/: index.md  plan.md  spec.md
conductor/archive/token_efficiency_20260201/: index.md  plan.md  spec.md
docs/: DEPLOYMENT.md  TOOLS.md
src/monarch_mcp_server/: __init__.py  client.py  exceptions.py  http_server.py  oauth_state.py  paths.py  safety.py  safety_config.py  safety_decorator.py  safety_guard.py  secure_session.py  server.py  utils.py
src/monarch_mcp_server/tools/: __init__.py  _common.py  accounts.py  budgets.py  categories.py  metadata.py  refresh.py  safety.py  tags.py  transactions.py
tests/: conftest.py  test_account_tools.py  test_budget_tools.py  test_category_tools.py  test_client.py  test_exceptions.py  test_formatting.py  test_http_server.py  test_http_server_integration.py  test_init_patch.py  test_metadata_tools.py  test_refresh_tools.py  test_safety.py  test_safety_destructive.py  test_safety_tools.py  test_secure_session.py  test_server.py  test_server_integration.py  test_server_tools.py  test_tag_tools.py  test_tool_handler.py  test_tools_structure.py  test_transaction_efficiency.py  test_transaction_tools.py  test_utils.py  test_validation.py
