[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monarch-mcp-server-extended"
version = "1.1.0"
description = "Extended Model Context Protocol (MCP) server for Monarch Money with 40+ tools covering the complete API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rob Cerda" },
]
maintainers = [
    { name = "Santiago L." },
]
keywords = ["mcp", "monarch-money", "personal-finance", "api", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "monarchmoney>=0.1.15",
    "gql>=3.4,<4.0",
    "keyring>=24.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # HTTP server dependencies for remote hosting
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    "fastmcp>=2.14.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/santiagolgzz/monarch-mcp-server"
Repository = "https://github.com/santiagolgzz/monarch-mcp-server"
Issues = "https://github.com/santiagolgzz/monarch-mcp-server/issues"
Upstream = "https://github.com/robcerda/monarch-mcp-server"

[project.scripts]
monarch-mcp-server = "monarch_mcp_server.server:main"
monarch-mcp-http = "monarch_mcp_server.http_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line length handled by formatter
    "B904",   # raise-without-from-inside-except - too noisy for validation errors
    "B905",   # zip-without-explicit-strict - Python 3.10+ behavior is fine
    "SIM117", # multiple-with-statements - sometimes clearer to nest
]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
